--- a/gameOfLife.cabal
+++ b/gameOfLife.cabal
@@ -27,6 +27,7 @@ executable gameOfLife
     -- Modules included in this executable, other than Main.
     other-modules:   Lib
                    , StepSimulation
+                   , Draw
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
