--- a/gameOfLife.cabal
+++ b/gameOfLife.cabal
@@ -28,6 +28,7 @@ executable gameOfLife
     other-modules:   Lib
                    , StepSimulation
                    , Draw
+                   , ParsePlain
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
